Ensured window is not incorrectly selected on mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,8 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
+
+  user-select: none;
 }
 
 h1 {
@@ -49,8 +51,9 @@ button {
   text-decoration: none;
   background: #03a9f4;
   color: #ffffff;
-  font-family: sans-serif;
+  font-family: inherit;
   font-size: 5vmin;
+  font-weight: 500;
   border-radius: 4px;
   line-height: 1;
   cursor: pointer;
@@ -76,7 +79,7 @@ button:focus {
 
 .phonic {
   color: #fff;
-  background-color: #0091EA;
+  background-color: #0091ea;
   font-size: 10vmin;
   line-height: 1;
   border-radius: 10vmin;
